--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_width="320dp"
         android:layout_height="370dp"
         android:layout_marginBottom="32dp"
-        android:background="#991B1145"
+        android:background="@drawable/rounded_border"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,6 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
             android:layout_marginBottom="60dp"
+            android:background="@drawable/rounded_border"
             android:text="@string/login" />
 
     </FrameLayout>
